Attempt to fix icon not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ body {
   font-family: 'Material Symbol Rounded';
   font-style: normal;
   font-weight: 400;
-  src: url(/assets/font/material-symbol-rounded.woff2) format('woff2');
+  src: url(/font/material-symbol-rounded.woff2) format('woff2');
 }
 
 .m-icon {
